[tool.poetry]
name = "fastapi-pet"
version = "0.1.0"
description = ""
authors = ["Sinder <rasul_sadullayev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.1"}
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
